# homebrew_cluster_computing

./: CMakeLists.txt  aboutUDP  example_master.cpp  example_slave.cpp
include/: .message_types.hpp.swp  master.hpp  message_types.hpp  slave.hpp
src/: example_master.cpp  example_slave.cpp  master.cpp  slave.cpp
